fixed overlap in to do list with header

--- a/style.css
+++ b/style.css
@@ -2,26 +2,71 @@
 
 /* extra styling added by Texas A&M CSCE 436 Team */
 
-/* Position header on the leftmost side of the main content box */
-#toDoHeader {
-    padding-left: 0px;
-    padding-bottom: 15px;
-}
-
-/* Below styling taken from https://www.w3schools.com/howto/howto_js_todolist.asp */
+/* Include the padding and border in an element's total width and height */
+#toDoList #toDoHeader {
+    box-sizing: border-box;
+  }
+  
+/* Remove margins and padding from the list */
+#toDoList ul {
+    margin: 0;
+    padding: 0;
+  }
   
 /* Style the list items */
 #toDoList ul li {
     cursor: pointer;
-    padding: 12px 8px 12px 0px;
+    position: relative;
+    padding: 12px 8px 12px 40px;
     background: #eee;
     font-size: 18px;
+    transition: 0.2s;
+  
+    /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-
+  
 /* Set all odd list items to a different color (zebra-stripes) */
 #toDoList ul li:nth-child(odd) {
     background: #f9f9f9;
 }
+  
+/* When clicked on, add a background color and strike out text */
+#toDoList ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+}
+  
+/* Add a "checked" mark when clicked on */
+#toDoList ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+}
+
+/* Style the header */
+#toDoHeader {
+    padding: 20px 30px 20px 10px;
+}
+  
+/* Clear floats after the header */
+#toDoHeader:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+  
 /* Above styling taken from https://www.w3schools.com/howto/howto_js_todolist.asp */
 
 /*!
